- https://github.com/eclipse-syson/syson/issues/1497[#1497] [database] Update the PostgreSQL version used in the docker image (used for tests purposes) to 15.
- https://github.com/eclipse-syson/syson/issues/1502[#1502] [libraries] Update standard libraries to SysMLv2 2025-07 specification.

=== New features

- https://github.com/eclipse-syson/syson/issues/1314[#1314] [diagrams] (Almost) All node descriptions are now synchronized (based on the exposed elements of ViewUsages).
This contribution allows to switch from one _ViewDefinition_ to another one in a _ViewUsage_ without having to re-create the diagram.

== v2025.8.0

=== Shapes

- Added a duplicate object menu item for SysMLv2 elements in the _Explorer_ view.
- Added a diagram tool to duplicate graphical nodes in diagrams.

=== Breaking changes
- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Aligned the metamodel with the SysMLv2 2025-04 specification released in April 2025 (see https://www.omg.org/spec/SysML/ for more details) and the KerML 2025-04 specification released in April 2025 (see https://www.omg.org/spec/KerML/ for more details).

**In any case, download all your existing models/projects and back up your database before upgrading to 2025.8.0 (as always).**

The new concepts are:

* `InstantiationExpression` (inherits from `Expression`)
* `ConstructorExpression` (inherits from `InstantiationExpression`)

The new attributes are:

* On `Feature`
** `isConstant : EBoolean`
* On `Usage`
** `mayTimeVary : EBoolean`

The new operations are:

* On `Element`
** `path() : EString`
* On `Feature`
** `isFeaturingType(Type) : EBoolean`
** `canAccess(Feature) : EBoolean`
* On `Type`
** `isCompatibleWith(Type) : EBoolean`
** `allRedefinedFeaturesOf(Membership) : Feature`

The new references are:

* On `Connector`
** `defaultFeaturingType : Type`
* On `InstantiationExpression`
** `argument : Expression`

The updates are:
