@@ -183,7 +183,7 @@
 		<dependency>
 			<groupId>org.eclipse.syson</groupId>
 			<artifactId>syson-sysml-metamodel</artifactId>
-			<version>2025.6.10</version>
+			<version>2025.8.3</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
